# BergamotTranslatorSharp

./: .editorconfig  .gitignore  .gitmodules  BergamotTranslatorSharp.sln  CMakeLists.txt  CMakePresets.json  Directory.Build.props  README.ja.md  README.md  cmake.bat  memo.md  profile.bat  vcpkg.json
.github/: dependabot.yml
.github/workflows/: package.yml
BergamotTranslatorSharp/: BergamotTranslatorSharp.csproj  BlockingService.cs  Class1.cs
ManagedSample/: ManagedSample.csproj  Program.cs
bergamot-translator-dynamic/: CMakeLists.txt
bergamot-translator-dynamic/include/: bergamot.h
bergamot-translator-dynamic/src/: bergamot.cpp  bergamot_translator_dynamic.cpp
cmake/patches/windows-arm64-clang-cl/: bergamot-translator.patch  marian-dev.patch  ruy.patch  sentencepiece.patch  simd-utils.patch
cmake/patches/windows-utf8-paths/: bergamot-translator.patch  marian-dev.patch
native-sample/: CMakeLists.txt  bergamot.cpp
